--- a/references.bib
+++ b/references.bib
@@ -5235,10 +5235,29 @@ url="http://dx.doi.org/10.1007/978-94-017-1183-8_6"
 }
 
 @article{vspats2016opinion,
-  title={Opinion Mining in Latvian Text Using Semantic Polarity Analysis and Machine Learning Approach},
+  title={{Opinion Mining in Latvian Text Using Semantic Polarity Analysis and Machine Learning Approach}},
   author={{\v{S}}pats, Gatis and Birzniece, Ilze},
   journal={Complex Systems Informatics and Modeling Quarterly},
   number={7},
   pages={51--59},
   year={2016}
 }
+
+@book{muiznieks2010,
+  editor    = {Nils Mui{\v{z}}nieks},
+  title     = {Cik integr{\={e}}ta ir Latvijas sabiedr{\={i}}ba Sasniegumu, neveiksmju un izaicin{\={a}}jumu audits},
+  publisher = {LU Akad{\={e}}miskais apg{\={a}}ds},
+  year      = {2010},
+  isbn      = {978-9984-45-219-7}
+}
+
+
+@incollection{sulmane2010,
+  author = {Ilze {\v{S}}ulmane},
+  editor    = {Nils Mui{\v{z}}nieks},
+  booktitle     = {Cik integr{\={e}}ta ir Latvijas sabiedr{\={i}}ba Sasniegumu, neveiksmju un izaicin{\={a}}jumu audits},
+  title =      {Mediji and integr{\={a}}cija},
+  publisher = {LU Akad{\={e}}miskais apg{\={a}}ds},
+  year =         {2010},
+}
+
