Updates from ShareLaTeX

--- a/figures/client-counts.tex
+++ b/figures/client-counts.tex
@@ -1,4 +1,5 @@
-\begin{table}[ht]
+\begin{table}[th]
+  \small
   \centering
   \begin{tabular}{lrr}
     \toprule
@@ -17,7 +18,7 @@
     \bottomrule
   \end{tabular}
   \caption{The top ten of Twitter clients in the rehydrated collection. $^*$Clients
-    that are not included to the final collection as they do not exhibit
+    that are not included in the final collection as they do not exhibit
     linguistic value.}
   \label{tab:client-counts}
 \end{table}
