--- a/references.bib
+++ b/references.bib
@@ -5245,19 +5245,25 @@ url="http://dx.doi.org/10.1007/978-94-017-1183-8_6"
 
 @book{muiznieks2010,
   editor    = {Nils Mui{\v{z}}nieks},
-  title     = {Cik integr{\={e}}ta ir Latvijas sabiedr{\={i}}ba Sasniegumu, neveiksmju un izaicin{\={a}}jumu audits},
-  publisher = {LU Akad{\={e}}miskais apg{\={a}}ds},
+  title     = {{How integrated is Latvian society: An Audit of Achievements, Failures and Challenges}},
+  publisher = {University of Latvia Press},
   year      = {2010},
-  isbn      = {978-9984-45-219-7}
+  isbn      = {978-9984-45-172-5}
 }
 
 
 @incollection{sulmane2010,
   author = {Ilze {\v{S}}ulmane},
   editor    = {Nils Mui{\v{z}}nieks},
-  booktitle     = {Cik integr{\={e}}ta ir Latvijas sabiedr{\={i}}ba Sasniegumu, neveiksmju un izaicin{\={a}}jumu audits},
-  title =      {Mediji and integr{\={a}}cija},
-  publisher = {LU Akad{\={e}}miskais apg{\={a}}ds},
-  year =         {2010},
+  booktitle     = {{How integrated is Latvian society: An Audit of Achievements, Failures and Challenges}},
+  title =      {{The Media and Integration}},
+  publisher = {University of Latvia Press},
+  year      = {2010},
+  isbn      = {978-9984-45-172-5}
 }
 
+@article{supule2005active,
+  title={Active Civic Participation of Immigrants in Latvia},
+  author={Supule, Inese},
+  year={2005}
+}
