--- a/paper.tex
+++ b/paper.tex
@@ -6,9 +6,10 @@
 \usepackage{url}
 \usepackage{booktabs}
 \usepackage{graphicx}
+\usepackage{balance}
 
 %\aclfinalcopy % Uncomment this line for the final submission
-%\def\aclpaperid{***} %  Enter the acl Paper ID here
+\def\aclpaperid{8} %  Enter the acl Paper ID here
 
 %\setlength\titlebox{5cm}
 % You can expand the titlebox if you need extra space
@@ -18,7 +19,7 @@
 
 \newcommand\BibTeX{B{\sc ib}\TeX}
 
-\title{Toward a Comparable Corpora of Latvian, Russian and English Tweets}
+\title{Toward a Comparable Corpus of Latvian, Russian and English Tweets}
 
 \author{First Author \\
   Affiliation / Address line 1 \\
@@ -43,33 +44,37 @@ Twitter has become a rich source for linguistic data. Here, a possibility of bui
 \section{Introduction}
 \label{sec:introduction}
 
+% No reference to Wierbicka? 
 Comparable corpora are widely used by the natural language processing community to build machine translation or information retrieval models. The goal of this work is to investigate whether it is possible to build a comparable linguistic resource of tweets that originates from one specific location--Riga, Latvia. Riga is a great location for this because it is a multilingual city in which Latvian and Russian are both widely used in everyday life, and English is used a lingua franca in tourism and commerce.
 
 Despite the fact that Latvian and Russian are widely used, there is little interaction between the two ethnic communities. The local media consists of two subsystems (Latvian and Russian) which use different sources and present different views on current affairs \cite{muiznieks2010}. However, despite the fact that large media portals tend to have separate Latvian and Russian web-sites, the same opinions are found in comments to controversial content on both versions of web-sites, making the Internet a public space for a dialogue  between the ethnic communities \cite{sulmane2010}. The resulting corpus of user generated content is a fruitful resource for studying the integration of the two communities, by identifying what is being discussed; how, and most importantly why it is being discussed.
 
 % Twitter,\footnote{\url{https://twitter.com}} a microblog platform, is used as the data source in this pilot study. Over the period of 5 months (November 2016 to March 2017), tweets from Riga were collected, filtered and analysed. The main goal of the analysis is to investigate whether a creation of a comparable tweet corpus is feasible and what the corpus construction strategy should be.
 
-The analysis of the tweets, shows that some real world events, such as national celebrations or international political affairs, are actively discussed on Twitter. While all three languages are represented---45.5\% tweets are in Latvian, 33.9\% in Russian and 20.7\% in English---not all events are equally discussed in all languages (Section~\ref{sec:timeline}). By studying users' tweeting habits, we see that the majority of users (83.3\%) mostly tweets in one language (Section~\ref{sec:lang-use}).
+To see whether a corpus is comparable, the peaks of Twitter usage were identified. The peaks correspond to real world events, such as national celebrations or international political affairs, are actively discussed on Twitter in all three languages, but in different proportions (Section~\ref{sec:timeline}).
 
-The properties of the corpus correspond to the expectation to reflect the real world events and language use proportion, but its size is too small to draw solid conclusions. However, the construction of a reliable corpus is the matter of the data collection procedure, because, as this study shows, there is relevant data on Twitter.
+All three languages are represented---45.5\% tweets are in Latvian, 33.9\% in Russian and 20.7\% in English.\footnote{
+The ratio of ethnic Latvians to Russians in Riga is 46.2\% to 37.7\%.}
+By studying users' tweeting habits, we see that the majority of users (83.3\%) mostly tweets in one language (Section~\ref{sec:lang-use}), making the tweet collection by subscribing to multilingual users partial.
 
-The resulting dataset is distributed as a supplement to the paper and available online at \texttt{http://...}
+The properties of the corpus correspond to the expectation to reflect the real world events and language use proportion, but its size is too small to draw solid conclusions. However, the construction of a reliable corpus is a matter of the data collection procedure, because, as this study shows, there is relevant data on Twitter.
+
+The resulting dataset is available online at \texttt{http://...}
+% IMS these are all good reasons to get a corpus containing tweets from all three languages.  How can we know the corpus is comparable, and what can we do if it is?
 
 \section{Related work}
 
-Twitter\footnote{\url{https://twitter.com}} provides an easy way to build a large text corpora for research. A numerous tweet collections are build and released for a variety of purposes. For example, \citet{sang2013} discuss the process of building a large collection of Dutch tweets and challenges of accessing the data. Their retrieval method is based on a list of frequent Dutch words.
+Twitter\footnote{\url{https://twitter.com}} provides an easy way to build a large text corpus for research. Numerous tweet collections are built for a variety of purposes. For example, \citet{sang2013} discuss the process of building a large collection of Dutch tweets and challenges of accessing the data. %In what sense? Can you elaborate? I think this is an interesting point.
+Their retrieval method is based on a list of frequent Dutch words.
+% IMS release of twitter collections is actually fraught b/c of TOS. DM: but releasing tweets IDs is fine.
 
 \citet{SANVICENTE16.465} build a parallel multilingual corpus of tweets%
-%in Spanish, Basque, Catalan, Galician and Portuguese
-. Their process consists of two parts: retrieval and alignment. Retrieval is based on a list of multilingual users. The collected tweets are aligned using crowdsourcing. \citet{ling-EtAl:2013:ACL2013} automatically extract parallel segments from Sina Weibo (a Chinese counterpart of Twitter). 
+%in Spanish, Basque, Catalan, Galician and Portuguese %% All Romance languages Latvian, Russian and English are overall more diverse
+. Their process consists of two parts: retrieval and alignment. Retrieval is based on a list of multilingual users. The collected tweets are aligned using crowdsourcing. \citet{ling-EtAl:2013:ACL2013} automatically extract parallel segments from Sina Weibo (a Chinese counterpart of Twitter).
 
 \citet{gotti-langlais-farzindar:2013:LASM} use the parallel web pages mentioned in tweets of the agencies and organisations of Canada to train a statistical machine translation model.
 
-There is a body of research of the Latvian twittersphere, for example the work on sentiment analysis \cite{Peisenieks2014} and opinion mining \cite{vspats2016opinion}. Both studies focus on Latvian.
-
-
-
-% \citet{gotti-langlais-farzindar:2013:LASM,Peisenieks2014}
+There is a small but growing body of research of the Latvian Twittersphere, for example, work on sentiment analysis \cite{Peisenieks2014} and opinion mining \cite{vspats2016opinion}. Both studies focus on Latvian.
 
 \section{Dataset construction}
 \label{sec:construction}
@@ -80,11 +85,13 @@ The collected tweets had to be geo-located and had to originate from the area of
 
 \footnotetext{The \texttt{locations} parameter was set to \texttt{23.9325829, 56.8570671, 24.3247299, 57.0859184}}
 
+% IMS My old observations (2010-2012) were that very few tweets had valid geo data. Has that changed?
+
 251\,083 tweets were collected within the period from the 1st of November 2016 to the 31st of March 2017. On April 14th 2017, the collection was rehydrated by querying the Twitter API with the collected tweet IDs to get rid of the deleted tweets. In addition, the tweets that originated from retweets were added to the collection: the JSON representation of a retweet includes the original tweet, which was extracted and added to the collection. The rehydrated and expanded collection resulted in a total of 220\,883 tweets. Table~\ref{tab:tweet-counts} summarises the number of collected tweets.
 
 \input{figures/tweet-counts.tex}
 
-Further analysis of the extended rehydrated collection showed that there are 23\,115 (10.5\%) tweets that originated from check-ins with on Foursquare.\footnote{\url{https://foursquare.com}} This motivated additional filtering of the rehydrated collection, as ``check-in tweets'' most of the time follow a predefined template and thus do not reflect real language use. % What does this mean and why?
+Further analysis of the extended rehydrated collection showed that there are 23\,115 (10.5\%) tweets that originated from check-ins with on Foursquare.\footnote{\url{https://foursquare.com}} This motivated additional filtering of the rehydrated collection, as ``check-in tweets'' follow a predefined template most of the time and thus do not reflect real language use. % What does this mean and why?
 
 \input{figures/client-counts.tex}
 
@@ -98,21 +105,23 @@ The final collection resulted in 136\,067 tweets which are in Latvian, Russian o
 \input{figures/timeline.tex}
 
 Out of 136\,067 tweets that constitute the final collection, 45.5\% are in Latvian, 33.9\% are in Russian and 20.7\% are in English, see Table~\ref{tab:language-counts} for tweet counts.
-% The ratio between the Latvian and Russian tweets is roughly the same as the proportion of ethnic Latvians and Russians in Riga, which is 46.2\% to 37.7\%.\footnote{\url{https://en.wikipedia.org/wiki/Riga}}
+% IMS the JSON field for language is actually a country tag, unless things have changed. Do we know anything about Twitter's language ID accuracy? DM: According to the Twitter docs, it's "the machine-detected language of the Tweet text". https://blog.twitter.com/2015/evaluating-language-identification-performance might give an answer regarding accuracy
 
 \input{figures/language-counts.tex}
 
-Figure~\ref{fig:timeline} shows the bandwidth of tweets over time for all three languages. There are several peaks in Twitter usage. Some of them affect all three languages, as in early January, some of them affect only one language, as in late January. % Any significance? Ah, I see next paragraph.
+Figure~\ref{fig:timeline} shows the number of tweets per day over time for all three languages. There are several peaks in Twitter usage. Some of them affect all three languages, as in early January, some of them affect only one language, as in late January.
 
-If the Twitter behaviour is affected by the events in the real world, then the peaks should correspond to events in the real word. The difference in peaks could then be explained as there are different real word events that trigger discussions on Twitter in Latvian, Russian and English. Table~\ref{tab:timeline-lang-corr} suggests, that tweets in Latvian and English share similar behaviour. The Russian tweet timeline is distinct from both timelines, tough its behaviour is more similar to the Latvian timeline than to English.
+If the Twitter behaviour is affected by events in the real world, then these peaks should correspond to events in the real world. The difference in peaks could then be explained as there are different real word events that trigger discussions on Twitter in Latvian, Russian and English. Table~\ref{tab:timeline-lang-corr} suggests, that tweets in Latvian and English share similar behaviour. The Russian tweet timeline is distinct from both timelines, though its behaviour is more similar to the Latvian timeline than to the English.
+%% ADD the numbers into the text using this format? http://www.discoveringstatistics.com/docs/writinglabreports.pdf I would ask this from my students actually. I have become quite strict about reporting statistical results properly. See also p. 228 here: http://www.soc.univ.kiev.ua/sites/default/files/library/elopen/andy-field-discovering-statistics-using-spss-third-edition-20091.pdf
 
 \input{figures/timeline-lang-corr.tex}
-
-What are the distinctive and similar properties of the timelines? To answer the question, we first identify the real world events that happened during the biggest peaks.
+% IMS be more specific here, you are computing the tweet frequency per unit time, right?
+What are the distinctive and similar properties of the timelines? To answer the question, we first identify the real world events that happened at the time of the highest peaks.
 
 \paragraph{Mid November}
 
 11th of November is \href{https://en.wikipedia.org/wiki/L\%C4\%81\%C4\%8Dpl\%C4\%93sis_Day}{L\={a}\v{c}pl\={e}sis Day}, a memorial day for soldiers who fought for the independence of Latvia. 18 November is the Proclamation Day of the Republic of Latvia. Numerous events take place across the country including candle placing on and by the wall of Riga Castle, torchlight processions and fireworks. The volume of tweets peaks in all three languages, though the peak in Russian is less significant than in Latvian and English.
+% tweets peaks is close to a crash blossom. ;-)
 
 % \paragraph{Mid December}
 
@@ -121,12 +130,14 @@ What are the distinctive and similar properties of the timelines? To answer the 
 \paragraph{Early January}
 
 There is a lot of activity during the New Year celebration for all three languages. Russian tweets peak the most almost reaching the same number of tweets as tweets in Latvian.
+% Show the sharpest rise?? I'm not sure whether peak the most is precise enough.
 
 \paragraph{Late January}
 
 \input{figures/score-hist.tex}
 
-The inauguration of Donald Trump as the 45th President of the United States held on 20th of January 2017. The number of Latvian tweets increases, while for other languages it stays roughly the same.
+The inauguration of Donald Trump as the 45th President of the United States was held on 20th of January 2017. The number of Latvian tweets increases, while for other languages it stays roughly the same.
+% Surpringing, no? My German friends were posting and tweeting in English that day. This contrasts slightly with the next sentence. 
 
 % \paragraph{Early March}
 
@@ -141,41 +152,49 @@ Timeline analysis gives an insight of what events are reflected on Twitter, but 
 \section{User analysis}
 \label{sec:lang-use}
 
-We have seen that the reflection of an event on Twitter depends on the language. How are languages used individually? Do Twitter users tweet in one language all the time, or switch between languages depending on the context?
+We have seen evidence of an event on Twitter reflecting an event depending on the language. How are languages used individually? Do Twitter users tweet in one language all the time, or do they switch between languages depending on the context?
 
-We consider 507 users for whom at least 50 tweets were collected. 180 or 35.5\% of them tweet exclusively in one language (75 users tweet only in Latvian, 43 in Russian and 62 in English). Others tweets in several languages.
+We consider 507 users for whom at least 50 tweets were collected. 180 or 35.5\% of them tweet exclusively in one language (75 users tweet only in Latvian, 43 in Russian and 62 in English). Others tweet in several languages.
 
 To get more insight on how languages are used, we compute the language uniformity score defined as:
 \begin{equation}
   \label{eq:score}
   \frac{\max(n_\mathit{lv}, n_\mathit{ru}, n_\mathit{en})}{n_\mathit{lv} + n_\mathit{ru} + n_\mathit{en}}
 \end{equation}
-where $n_\mathit{lv}$ corresponds to the number of tweets in Latvian for a given user, $n_\mathit{ru}$ in Russian and $n_\mathit{en}$ in English.
+where $n_\mathit{lv}$ corresponds to the number of tweets in Latvian for a given user, $n_\mathit{ru}$ to the number of tweets in Russian, and $n_\mathit{en}$ to the number of tweets in English.
+% I added an Oxford comma. I assume you are typing in AmE now?
 
-%The higher the score, the more dominant one language.
-The lowest possible value of 0.33 means that all three languages are used equally. The value of 0.5 means that 50\% of tweets are written in a dominant language. The value of 1 means that the user tweets exclusively in one language.
+%The higher the score, the more dominant a language. %% WHY removed?
+The lowest possible value of 0.33 means that all three languages are used equally. The value of 0.5 means that 50\% of tweets are written in a dominant language. % Technically. it's either at 0.34 or at 0.501, no?
+The value of 1 means that the user tweets exclusively in one language.
 
-The histogram on Figure~\ref{fig:score-hist} shows the score distribution. 420 (82.8\%) users tweet mostly in one language (their scores are greater than 0.9). For 83  (16.4\%) users the score is between 0.5 and 0.9. There are only four (0.8\%) users whose dominant language share is less than 50\%.
+The histogram in Figure~\ref{fig:score-hist} shows the score distribution. 420 (82.8\%) users tweet mostly in one language (their scores are greater than 0.9). For 83  (16.4\%) users the score is between 0.5 and 0.9. There are only four (0.8\%) users whose dominant language share is less than 50\%.
 
-Among the four Twitter users whose score is less than 0.5---meaning that they use all three languages extensively---three are personal accounts and one is a company account. Another interesting accounts that tweet equally in Latvian and Russian, but do not tweet in English are the accounts of a library and a football club.
+Among the four Twitter users whose score is less than 0.5---meaning that they use all three languages extensively---three are personal accounts and one is a company account. Other interesting accounts that tweet equally in Latvian and Russian, but do not tweet in English are the accounts of a library and a football club.
 
-To illustrate the language usage pattern between multilingual users, their first most frequently used language, their second most frequently used language and their third most frequently language were identified. If user tweeted equally in two (three) languages, then the two (three) languages were given the maximal preference. A user who tweeted equally in Latvian and Russian, but less in English, will counted as Latvian and Russian being the first perference, English as the third.
+To illustrate the language usage pattern between multilingual users, their first most frequently used language, their second most frequently used language and their third most frequently language were identified. If a user tweeted equally in two (three) languages, then the two (three) languages were given the maximal preference. A user who tweeted equally in Latvian and Russian, but less in English, will be counted as Latvian and Russian being their first preference, English as the third.
 
 Latvian is not only the most used language among the monoligual users, but also is the first and third most common choice between the multilingual users. The preference for Russian is similar to Latvian, despite the numbers being slightly lower, suggesting its significant role in everyday life. English is almost the ultimate second choice, proving its role as lingua franca, as Table~\ref{tab:language-use} shows.
+% as a lingua franca in this context/medium
 
 \input{figures/language-use.tex}
 
 \section{Conclusion}
 
-We have seen that location-based tweet collection produces adequate results. Tweets in all three target languages were collected, and the resulted collection reflects real world events.
+We have seen that location-based tweet collection produces adequate results. Tweets in all three target languages were collected, and the resulting collection reflects real world events.
 
-To produce reliable statistics, more data has to be collected. One way of getting more data (apart from a longer data collection period) is to retrieve tweets that contain words that are unique to a language \cite{sang2013}. This might work for Latvian, as it is reasonable to assume that a Latvian tweet originates from Latvia, but will not work for Russian and English.
-
-Instead, the properties of this corpus might be used to bootstrap data collection. The most active users might be identified and their tweets collected. If having a balanced corpus is important, then multilingual users might be preferred over monolingual. The user connection graph might also be useful.
-
-Regarding the social aspect of the corpus, the future work might have a look into why topics are language dependant? How separated/unified is the society? What are the controversial topics?
+To produce reliable statistics, more data has to be collected. One way of getting more data (apart from a longer data collection period) is to retrieve tweets that contain words that are unique to a language. This might work for Latvian, as it is reasonable to assume that a Latvian tweet originates from Latvia % If there was space for this, I would add the reference to the "1,000 languages" (book) entry which I sent you earlier as a picture via twitter messenger. 
+, but this will not work for Russian and English. Instead, the properties of this corpus might be used to bootstrap data collection. The most active users might be identified and their tweets collected. If having a balanced corpus is important, then multilingual users might be preferred over monolingual. The user connection graph might also be useful. Regarding the social aspect of the corpus, the future work might have a look into why topics are language dependant? How unified is the society? What are the controversial topics?
+%Sorry, just did a major change. Hope you lost nothing.
 
 \bibliography{references,dmilajevs_publications}
 \bibliographystyle{acl_natbib}
 
+\balance
+
 \end{document}
+
+% IMS key questions I have
+% We don't know if this corpus is comparable.  Do we care?  How would we know?  This is an important question because the workshop wants to know if they should take this paper.  Will people at the workshop want to hear about this work?
+% Do the rates of laguage use in the tweets reflect the actual ethnic population or daily language usage?  If not, then our sample has bias, and maybe things we observe are due to the sample bias.
+% The discussion of the peaks is weak... it feels like we could explain away any relative curve shape.  Can we say something substantive about why only Latvian speakers tweet in late January?
