Updates from ShareLaTeX

--- a/figures/language-use.tex
+++ b/figures/language-use.tex
@@ -11,6 +11,7 @@
     Multi, third   & \textbf{29}  & 26 & 9  \\
     \bottomrule
   \end{tabular}
-  \caption{Language choice between monolingual and multilingual users.}
+%   \caption{Language choice between monolingual and multilingual users.}
+    \caption{Language preference between users.}
   \label{tab:language-use}
 \end{table}
