--- a/figures/timeline-lang-corr.tex
+++ b/figures/timeline-lang-corr.tex
@@ -1,9 +1,9 @@
-\begin{table}[h]
+\begin{table}[ht]
   \centering
 
   \input{supplement/figures/timeline-lang-corr.tex}
   
   \caption{Pairwise Pearson's-$\rho$ correlation coefficients between Latvian,
-    Russian and English tweets.}
+    Russian and English timelines.}
   \label{tab:timeline-lang-corr}
 \end{table}
