--- a/references.bib
+++ b/references.bib
@@ -5262,8 +5262,43 @@ url="http://dx.doi.org/10.1007/978-94-017-1183-8_6"
   isbn      = {978-9984-45-172-5}
 }
 
+@incollection{tabuns2010,
+  author = {Aivars Tabuns},
+  editor    = {Nils Mui{\v{z}}nieks},
+  booktitle     = {{How integrated is Latvian society: An Audit of Achievements, Failures and Challenges}},
+  title =      {{Identity, Ethnic Relations, Language and Culture}},
+  publisher = {University of Latvia Press},
+  year      = {2010},
+  isbn      = {978-9984-45-172-5}
+}
+
 @article{supule2005active,
   title={Active Civic Participation of Immigrants in Latvia},
   author={Supule, Inese},
   year={2005}
+}
+
+@misc{civicsociety,
+author = {Ei{\v{z}}enija Aldermane
+and Reinis {\={A}}bolti{\c{n}}{\v{s}}
+and Heidi Bottolfs
+and Boriss Cil{\={e}vi{\v{c}}s}
+and J{\={a}}nis Jaudzems
+and Anita J{\={a}}kobsone
+and {\={A}}brams Kleckins
+and Falks Lange
+and J{\={a}}nis Ma{\v{z}}eiks
+and Ilm{\={a}}rs Me{\v{z}}s
+and Nils Mui{\v{z}}nieks
+and Artis Pabriks
+and Aija Pried{\={\i}}te
+and Ilona Stalidz{\={a}}ne
+and Inese {\v{S}}{\={u}}pule
+and Ramona Umblija
+and Elm{\={a}}rs V{\={e}}bers
+and Brigita Zepa
+},
+  title={{``Towards a Civic Society-2000'' Survey of Latvian Inhabitants}},
+  howpublished={Baltic Institute of Social Sciences},
+  year={2000},
 }
